[tool.poetry]
name = "nanogpt-jax"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jax = ">=0.4.1"
jaxlib = ">=0.4.1"
nnx = { path = "../nnx", develop = true }
torch = "<2.0.0"
optax = ">=0.1.4"
tiktoken = ">=0.1.2"
tqdm = ">=4.64.1"
datasets = ">=2.8.0"
wandb = ">=0.13.9"
tensorflow-cpu = ">=2.11.0"
orbax = ">=0.1.0"
transformers = ">=4.26.0"
flax = "^0.6.10"


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
